tests/src/frontend/typechecking/invalid/type_const_default2.sk
class Foo() {
  type T default Int;
}
